--- a/index.html
+++ b/index.html
@@ -20,19 +20,7 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <div class="container">
-        <button
-          class="menu-toggle js-open-menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
-        >
-          <svg class="menu-toggle-icons"
-            width="32"
-            height="32"
-          >
-            <use href="./images/icons.svg#icon-charm_menu-hamburger"></use>
-          </svg>
-        </button>
+
     <title>Web<span>Studio</span></title>
   </head>
 
@@ -64,6 +52,11 @@
             </li>
           </ul>
         </address>
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <svg class="menu-toggle-icons" width="32" height="32">
+            <use href="./images/icons.svg#icon-charm_menu-hamburger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!--Main section-->
@@ -155,7 +148,7 @@
       </section>
       <!--Third section-->
       <section class="third-sec" id="cont">
-        <div class="container">
+        <div class="container con-div">
           <h2 class="second-third-title">Our Team</h2>
 
           <ul class="third-container list">
@@ -534,27 +527,65 @@
 
     <!--Mobile screen-->
     <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-        <svg
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          ></path>
+      <button class="modal-button-mob js-close-menu" type="button" data-modal-close>
+        <svg class="modal-icon-mob" width="8" height="8">
+          <use href="./images/icons.svg#icon-close-icon"></use>
         </svg>
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="" class="link">About</a></li>
-        <li><a href="" class="link">Products</a></li>
-        <li><a href="" class="link">Contacts</a></li>
-        <li><a href="" class="link">Career</a></li>
+        <li>
+          <a class="nav-mob blue lnk" href="./index.html" target="_blank">Studio</a>
+        </li>
+        <li>
+          <a class="nav-mob link" href="./portfolio.html">Portfolio</a>
+        </li>
+        <li>
+          <a class="nav-mob link" href="#cont">Contacts</a>
+        </li>
+      </ul>
+      <address class="mobile-address-mob list">
+        <ul class="mobile-address-container list">
+          <li>
+            <a class="contact-mob-tel link" href="tel:+110001111111"> +11 (000) 111-11-11 </a>
+          </li>
+          <li>
+            <a class="contact-mob-mail link" href="mailto:info@devstudio.com">
+              info@devstudio.com
+            </a>
+          </li>
+        </ul>
+      </address>
+
+      <ul class="social-media-mobil social-mobile">
+        <li class="media-li-mob">
+          <a class="media-a-mob" href="" aria-label="icon-instagram">
+            <svg class="media-icon-mob" width="16" height="16">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="media-li-mob">
+          <a class="media-a-mob" href="" aria-label="icon-twitter">
+            <svg class="media-icon-mob" width="16" height="16">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="media-li-mob">
+          <a class="media-a-mob" href="" aria-label="icon-facebook">
+            <svg class="media-icon-mob" width="16" height="16">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="media-li-mob">
+          <a class="media-a-mob" href="" aria-label="icon-linkedin">
+            <svg class="media-icon-mob" width="16" height="16">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
       </ul>
     </div>
 
