--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             growth solutions.
           </p>
         </div>
-        <div class="footer-flex">
+        <div class="footer-flex-par">
           <p class="footer-paragraph"> Social media </p>
           <ul class="social">
             <li class="social-media-f">
@@ -547,12 +547,10 @@
       <address class="mobile-address-mob list">
         <ul class="mobile-address-container list">
           <li>
-            <a class="contact-mob-tel link" href="tel:+110001111111"> +11 (000) 111-11-11 </a>
+            <a class="contact-mob-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
           <li>
-            <a class="contact-mob-mail link" href="mailto:info@devstudio.com">
-              info@devstudio.com
-            </a>
+            <a class="contact-mob-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
         </ul>
       </address>
