--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 height="260"
               />
               <div class="employee-card">
-                <h3 class="card-h header-h">Mark Guerrero</h3>
+                <h3 class="card-h header-h-t">Mark Guerrero</h3>
                 <p class="card-par par-text">Product Designer</p>
 
                 <ul class="social-media">
@@ -204,7 +204,7 @@
                 height="260"
               />
               <div class="employee-card">
-                <h3 class="card-h header-h">Tom Ford</h3>
+                <h3 class="card-h header-h-t">Tom Ford</h3>
                 <p class="card-par par-text">Frontend Developer</p>
 
                 <ul class="social-media">
@@ -248,7 +248,7 @@
                 height="260"
               />
               <div class="employee-card">
-                <h3 class="card-h header-h">Camila Garcia</h3>
+                <h3 class="card-h header-h-t">Camila Garcia</h3>
                 <p class="card-par par-text">Marketing</p>
 
                 <ul class="social-media">
@@ -292,7 +292,7 @@
                 height="260"
               />
               <div class="employee-card">
-                <h3 class="card-h header-h">Daniel Wilson</h3>
+                <h3 class="card-h header-h-t">Daniel Wilson</h3>
                 <p class="card-par par-text">UI Designer</p>
 
                 <ul class="social-media">
@@ -332,7 +332,7 @@
       </section>
       <!--Fourth section-->
       <section class="fourth-sec">
-        <div class="container">
+        <div class="container cont">
           <h2 class="second-third-title">Customers</h2>
           <ul class="client-list">
             <li class="client-items">
@@ -383,7 +383,7 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <div class="container-footer">
+      <div class="container-footer cont">
         <div class="footer-flex">
           <a class="logo-footer logo link" href="./index.html"
             >Web<span class="logo-wit">Studio</span>
@@ -394,7 +394,7 @@
           </p>
         </div>
         <div class="footer-flex-par">
-          <p class="footer-paragraph"> Social media </p>
+          <p class="footer-paragraph footer-pad"> Social media </p>
           <ul class="social">
             <li class="social-media-f">
               <a class="social-media-footer" href="" aria-label="icon-instagram">
